--- a/docs/03/S03.02.lab.nginxserver.md
+++ b/docs/03/S03.02.lab.nginxserver.md
@@ -65,7 +65,7 @@ Une fois dans la session shell, répondez à ces quelques questions
 - qui êtes vous ?
 - allez dans `/home`. Quel sont les utilisateurs du système ?
 - allez dans `/root` et listez les fichiers.
-- qu'est ce qui est different par rapport à la distribution Ubuntu ?
+- qu'est ce qui est différent par rapport à la distribution Ubuntu ?
 - par exemple est ce que `ll` est définie comme alias pour le user root ?
 
 ## setup du container
