--- a/docs/03/S03.04.dockerfiles.md
+++ b/docs/03/S03.04.dockerfiles.md
@@ -10,7 +10,9 @@ Dans cette session nous allons voir les **Dockerfile**
 
 et pour la partie pratique
 
-- lancer un server web Nginx en partant de nginx:latest (voir <https://training.play-with-docker.com/beginner-linux/>)
+- lancer un server web Nginx en partant de nginx:latest
+
+voir <https://training.play-with-docker.com/beginner-linux/>
 
 ## Comment construire des images ?
 
