--- a/docs/04/S04.02.images.optimisation.md
+++ b/docs/04/S04.02.images.optimisation.md
@@ -179,17 +179,18 @@ RUN rm -rf /var/lib/apt/lists/*
 
 Un ordre optimisé pour une application python classique sera par exemple
 
-### 1. **Base Image**: Start with a stable base image that includes your desired Python version
+1. **Base Image**: Start with a stable base image that includes your desired Python version
 
-### 2. **Set environment variables**: Any environment settings, such as `ENV`, `WORKDIR`, or `PATH`, that don’t change often
+2. **Set environment variables**: Any environment settings, such as `ENV`, `WORKDIR`, or `PATH`, that don’t change often
 
-### 3. **Install dependencies**: First copy only the dependencies file (like `requirements.txt`), and install them. This allows Docker to cache the installed dependencies layer if the dependencies haven’t changed
+3. **Install dependencies**: First copy only the dependencies file (like `requirements.txt`), and install them. This allows Docker to cache the installed dependencies layer if the dependencies haven’t changed
 
-### 4. **Copy application code**: Copy the app code and configure it
+4. **Copy application code**: Copy the app code and configure it
 
-### 5. **Expose ports and define entry points**: Define how your app will start and what ports are exposed
+5. **Expose ports and define entry points**: Define how your app will start and what ports are exposed
 
-Here’s an example for a Python app with a `requirements.txt` file:
+Voici un exemple pour une appli python avec un fichier requirements.txt
+
 
 ### Optimized Dockerfile for a Python App
 
@@ -305,7 +306,8 @@ Le format exec est jugé plus sécurisé et plus performant. La commande est exe
 Comment gérer de la façon la plus sécurisée, les variables secretes dans un Dockerfile
 
 La règle d'or est de ne jamais copier le mot de passe ou la clef API directement dans le Dockerfile.
-Le Dockerfile est inclu dans l'image et le mot de passe sera accessible à tous ceux qui ont accès l'image.
+
+Le Dockerfile peut se retrouver dans l'image  et le mot de passe sera accessible à tous ceux qui ont accès l'image.
 
 ### Lors du RUN du container
 
@@ -337,6 +339,8 @@ docker run -e PGPASS="$PGPASS" my_image
 
 ### utiliser un fichier `.env`
 
+Pour React voir https://medium.com/@rivaifnasution/tutorial-how-to-use-dotenv-in-react-for-beginners-ac79d9b6ddbf 
+
 Stocker les cles et mot de passe dans un fichier .env
 
 > Attention à ne jamais copier le .env file directement dans le dockerfile
@@ -362,3 +366,5 @@ Le fichier `.env` n'est disponible que dans le container quand il run mais pas d
 - <https://medium.com/@arif.rahman.rhm/choosing-the-right-python-docker-image-slim-buster-vs-alpine-vs-slim-bullseye-5586bac8b4c9>
 
 - CMD vs Entrypoint <https://medium.com/@mrdevsecops/dockerfile-cmd-vs-entrypoint-78b219d55df0>
+
+- Dotenv pour React <https://medium.com/@rivaifnasution/tutorial-how-to-use-dotenv-in-react-for-beginners-ac79d9b6ddbf>
