--- a/docs/04/S04.03.questions-app.md
+++ b/docs/04/S04.03.questions-app.md
@@ -217,11 +217,7 @@ Mais il faut d'abord stopper et supprimer le container
 Puis relancer un nouveau container avec cette fois
 
 ```bash
-docker run -d -p 8500:8500 \
--e ./.env \
--v $(pwd):/app \
-questions:01 \
---name questions_app
+docker run -d -p 8500:8500 -e ./.env  -v $(pwd):/app  --name questions_app questions:01
 ```
 
 Pour verifier que tout fonctionne, allez dans le fichier `app.py` et modifiez le code. Puis rechargez la page pour voir les modifications.
