--- a/docs/05/S05.02.nginx-sqlite-vue.md
+++ b/docs/05/S05.02.nginx-sqlite-vue.md
@@ -1,18 +1,16 @@
-# Premiere application
+# Tutorial guidé
 
-<https://claude.ai/chat/d075de77-e247-443a-b0f4-dc646965949c>
-
-On va construite une application web avec docker compose composée de
+On va construite une application web avec docker compose, composée de
 
 - nginx
-- une bdd sqlite
+- une base de données sqlite
 - vue.js
 
-en plusieurs etapes
+En plusieurs étapes
 
 - 1: page static + sqlite en background
-- 2: initializer la bdd avec des data
-- 3: CRUD sur la page web
+- 2: puis initializer la bdd avec des data
+- 3: Voir les données sur la page
 
 > créez un repertoire pour l'application
 
@@ -21,21 +19,21 @@ mkdir nginx-sqlite-vue
 cd nginx-sqlite-vue
 ```
 
-et dans ce repertoire creez les repertoire `data` et `html`
+et dans ce repertoire créez les repertoire `data` et `html`
 
 ```bash
 mkdir data
 mkdir html
 ```
 
-## Version basique
+## Version de base
 
 On souhaite avoir
 
-- une simple page web statique : index.html servie par Nginx
-- lancer une bdd sqlite (simple et petite) en background
+- une simple page web statique : `index.html` servie par Nginx
+- et lancer une base de donnée sqlite (simple et petite) en background
 
-la bdd sera vide mais on verra comment y acceder.
+La base de donnée sera vide mais on verra comment y accéder.
 
 On a besoin des fichiers suivants:
 
@@ -128,7 +126,7 @@ volumes:
     - ./data:/data
 ```
 
-Dans les 2 cas on a le repertoire local (host) a gauche et celui du container a droite
+Dans les 2 cas on a le repertoire local (host) à gauche et celui du container à droite: **host:container**
 
 Notez le `:ro` ajouté au fichier `/etc/nginx/nginx.conf` pour read only
 
@@ -138,20 +136,16 @@ On a aussi la ligne
 command: /bin/sh -c "while true; do sleep 1; done"
 ```
 
-En fait il s'agit la d'un hack pour que le serveur sqlite tourne indefiniment.
+En fait il s'agit la d'un hack pour que le serveur sqlite tourne indéfiniment.
 
-Cette image de SQlite n'est pas faite pour tourner comme un serveur. et n'a donc pas de processus principale.
-ce hack crée un processus de fond qui toune indefiniment.
+Cette image de SQLite n'est pas faite pour tourner comme un serveur et n'a donc pas de processus principale.
+Ce hack crée un processus de fond qui toune indéfiniment.
 
-On pourrait aussi utiliser
+On pourrait aussi utiliser comme commande `command: tail -f /dev/null`.
+
+Enfin il y à la ligne **`depends_on`**:
 
 ```yaml
-command: tail -f /dev/null
-```
-
-Enfin il y a la ligne `depends_on`:
-
-```
 depends_on:
     - sqlite
 ```
@@ -162,21 +156,14 @@ qui indique que nginx ne sera demarré que si SQLITE est actif
 
 The depends_on: - sqlite line indicates that the nginx service depends on the sqlite service. This dependency has several implications:
 
-Start-up order:
-Docker Compose will start the sqlite service before starting the nginx service. This ensures that the sqlite container is running before nginx attempts to start.
-Shutdown order:
-When stopping services, Docker Compose will stop the nginx service before stopping the sqlite service.
-Readiness:
-It's important to note that depends_on only waits for the container to start, not for it to be "ready" or fully initialized. It doesn't check if the service inside the container is actually operational.
-Docker Compose commands:
-When you run commands like docker-compose up or docker-compose stop, the dependency will be respected. For example, docker-compose up nginx would also start the sqlite service because nginx depends on it.
+- Start-up order: Docker Compose will start the sqlite service before starting the nginx service. This ensures that the sqlite container is running before nginx attempts to start.
+- Shutdown order: When stopping services, Docker Compose will stop the nginx service before stopping the sqlite service.
+- Readiness: It's important to note that depends_on only waits for the container to start, not for it to be "ready" or fully initialized. It doesn't check if the service inside the container is actually operational.
+- Docker Compose commands: When you run commands like docker-compose up or docker-compose stop, the dependency will be respected. For example, docker-compose up nginx would also start the sqlite service because nginx depends on it.
 
 However, in this specific case, the usefulness of this dependency is questionable because:
 
-The sqlite service, as configured, doesn't actually run a SQLite server. It's just keeping a container alive with a sleep loop.
-There's no clear indication in the provided configuration that the nginx service actually needs or uses the sqlite service.
-
-If there's no actual dependency between these services in your application logic, you might not need the depends_on directive.
+The sqlite service, as configured, doesn't actually run a SQLite server. It's just keeping a container alive with a sleep loop. There's no clear indication in the provided configuration that the nginx service actually needs or uses the sqlite service.
 
 ### regardons ce qui tourne
 
@@ -202,7 +189,7 @@ docker-compose exec sqlite /bin/sh
 > sqlite3 /data/your_database.db
 ```
 
-ou directemnt
+ou directement
 
 ```bash
 docker-compose exec sqlite sqlite3 /data/your_database.db
@@ -218,7 +205,7 @@ create table user (id serial, email text);
 
 puis `.quit` pour sortir de sqlite.
 
-On peut aussi acceder au container du service nginx
+On peut aussi accéder au container du service nginx
 
 par exemple
 
@@ -228,7 +215,7 @@ docker compose exec nginx ls -l /usr/share/nginx/html
 
 #### down down down
 
-pour arreter les containers on fait
+pour arrêter les containers on fait
 
 ```bash
 docker compose down
@@ -236,19 +223,19 @@ docker compose down
 
 ![docker compose down](./../../img/5-docker-compose-down.png)
 
-La commande down arrete les 2 containers et le reseaux interne.
+La commande down arrête les 2 containers et le réseaux interne.
 
 ### Recap
 
-Donc on a un fichier compose.yaml qui fait tourner 2 services et donc 2 containers.
+Donc on a un fichier `compose.yaml` qui fait tourner 2 services et donc 2 containers.
 
-mais pour l'instant la partie web n'utilise pas la base de données.
+Mais pour l'instant la partie web n'utilise pas la base de données.
 
-Donc etape 2 : on veut initializer la bdd sqlite avec des données
+Donc étape 2 : on veut initializer la bdd sqlite avec des données
 
 ## Version avec des données
 
-Il nous faut execiter un scirpt SQL pour creer la table, et y inserer ddes rows
+Il nous faut executer un script SQL pour créer la table, et y insérer des rows
 
 dans un fichier `init.sql` dans le repertoire racine du projet
 
