--- a/docs/05/S05.01.intro-docker-compose.md
+++ b/docs/05/S05.01.intro-docker-compose.md
@@ -1,3 +1,6 @@
+- [Docker compose](#docker-compose)
+  - [Au menu](#au-menu)
+
 # Docker compose
 
 ## Au menu
@@ -14,5 +17,6 @@ Faire tourner plusieurs containers avec docker composer a partir d'un fichier `c
 - exemples: Minecraft, airflow,
 - integration dans un pipeline CI/CD
 - projet : bot discord
+
 
 Mais tout d'abord un récapitulatif rapide de ce que l'on a vu lors des premières session ; les Dockerfiles
