--- a/docs/05/S05.suite.md
+++ b/docs/05/S05.suite.md
@@ -40,7 +40,7 @@ services:
       - POSTGRES_PASSWORD=password
 ```
 
-## Docker compose workkflow
+## Docker compose workflow
 
 1. Using `docker compose up` with a service that uses `build`:
 
