--- a/src/S05.04.nginx-sqlite-vue.md
+++ b/src/S05.04.nginx-sqlite-vue.md
@@ -1,43 +1,45 @@
-# Tutorial guidé
+# Tutorial guidé : Docker compose pour Nginx, SQLite et Vue.js
 
-On va construite une application web avec docker compose, composée de
 
-- nginx
-- une base de données sqlite
-- vue.js
 
-En plusieurs étapes
+On va construire une application web avec **docker compose**, composée de
 
-- 1: page static + sqlite en background
-- 2: puis initializer la bdd avec des data
-- 3: Voir les données sur la page
+- Nginx pour le serveur web
+- SQLite pour la base de données
+- Vue.js pour le front-end
 
-> créez un repertoire pour l'application
+En plusieurs étapes:
+
+- 1: page static + SQLite en background
+- 2: puis initialiser la bdd avec quelques échantillons
+- 3: Enfin, afficher les données sur la page
+
+Créez un repertoire pour l'application
 
 ```bash
 mkdir nginx-sqlite-vue
 cd nginx-sqlite-vue
 ```
 
-et dans ce repertoire créez les repertoire `data` et `html`
+Dans ce répertoire créez les repertoire `data` et `html`
 
 ```bash
 mkdir data
 mkdir html
 ```
 
-## Version de base
+## Première version
 
 On souhaite avoir
 
 - une simple page web statique : `index.html` servie par Nginx
-- et lancer une base de donnée sqlite (simple et petite) en background
+- et lancer une base de donnée SQLite (simple et petite) en background
 
-La base de donnée sera vide mais on verra comment y accéder.
+La base de donnée sera vide mais on verra comment y accéder et la peupler de données.
 
 On a besoin des fichiers suivants:
 
-- nginx.conf
+### nginx.conf
 
 ```json
 events {
@@ -57,17 +59,17 @@ http {
 }
 ```
 
-- html/index.html
+### html/index.html
 
 ```html
-<h1>Bonjour </h1>
+<h1>Bonjour</h1>
 ```
 
-le fichier `index.html` doit être dans le repertoire `./html`
+Le fichier `index.html` doit être dans le repertoire `./html`
 
-- compose.yaml
+### compose.yaml
 
-et le fichier docker compose: `compose.yaml`
+et le fichier docker compose à la racine du projet:
 
 ```yaml
 version: '3.8'
@@ -89,15 +91,13 @@ services:
       - ./data:/data
     command: /bin/sh -c "while true; do sleep 1; done"
 
-volumes:
-  data:
 ```
 
 Vous devez avoir l'arborescence suivante
 
 ![folder structure](./../../img/5-nginx-sqlite-vue-folders.png)
 
-Puis lancer l'application avec
+Lancez l'application avec
 
 ```bash
 docker compose up
@@ -105,9 +105,9 @@ docker compose up
 
 La page <http://localhost:80> doit afficher "Bonjour".
 
-### le compose.yaml
+### Revenons sur le fichier `compose.yaml`
 
-Revenons sur le fichier compose.yaml.
+Dans le fichier `compose.yaml`.
 
 - 2 services sont déclarés: `nginx` et `sqlite`
 - avec comme point de depart les images : `nginx:latest` et `keinos/sqlite3:latest`
@@ -119,29 +119,21 @@ volumes:
     - ./html:/usr/share/nginx/html
 ```
 
-et
-
-```yaml
-volumes:
-    - ./data:/data
-```
-
 Dans les 2 cas on a le repertoire local (host) à gauche et celui du container à droite: **host:container**
 
 Notez le `:ro` ajouté au fichier `/etc/nginx/nginx.conf` pour read only
 
-On a aussi la ligne
+On a aussi la ligne 
 
 ```yaml
 command: /bin/sh -c "while true; do sleep 1; done"
 ```
 
-En fait il s'agit la d'un hack pour que le serveur sqlite tourne indéfiniment.
+En fait il s'agit la d'un hack pour que le serveur SQLite tourne indéfiniment. 
 
-Cette image de SQLite n'est pas faite pour tourner comme un serveur et n'a donc pas de processus principale.
-Ce hack crée un processus de fond qui toune indéfiniment.
+L'image de SQLite  `keinos/sqlite3:latest`  n'est pas faite pour tourner comme un serveur et n'a donc pas de processus principale. Ce hack crée un processus de fond qui toune indéfiniment et qui permet à SQLite de rester vivant.
 
-On pourrait aussi utiliser comme commande `command: tail -f /dev/null`.
+On pourrait aussi utiliser comme commande `command: tail -f /dev/null` à la place de `/bin/sh -c "while true; do sleep 1; done"`.
 
 Enfin il y à la ligne **`depends_on`**:
 
@@ -150,11 +142,11 @@ depends_on:
     - sqlite
 ```
 
-qui indique que nginx ne sera demarré que si SQLITE est actif
+qui indique que Nginx ne sera démarré que si SQLITE est déjà activé.
 
-#### depends on
+### depends on
 
-The depends_on: - sqlite line indicates that the nginx service depends on the sqlite service. This dependency has several implications:
+The `depends_on`: - sqlite line indicates that the nginx service depends on the sqlite service. This dependency has several implications:
 
 - Start-up order: Docker Compose will start the sqlite service before starting the nginx service. This ensures that the sqlite container is running before nginx attempts to start.
 - Shutdown order: When stopping services, Docker Compose will stop the nginx service before stopping the sqlite service.
@@ -264,7 +256,7 @@ command: >
     "
 ```
 
-ou le symbol `>` apres command indique un texte sur plusieurs lignes.
+ou le symbol `>` après `command` indique un texte sur plusieurs lignes.
 
 On peut alors verifier que la bdd n'est plus vide
 
@@ -287,7 +279,7 @@ select * from users;
 
 On va utiliser vue.js
 
-Certainly! I'll help you set up a simple front-end using Vue.js to display the content of the SQLite database on the index.html page. We'll need to make a few changes to our existing setup:
+set up a simple front-end using Vue.js to display the content of the SQLite database on the index.html page. We'll need to make a few changes to our existing setup:
 
 1. Update the Nginx configuration to allow API requests.
 2. Add a new service for a simple API server to fetch data from SQLite.
@@ -330,7 +322,7 @@ volumes:
 
 Now, let's update the Nginx configuration:
 
-```nginx
+```text
 events {
     worker_connections 1024;
 }
@@ -472,9 +464,9 @@ Now, let's go through the steps to set up and run this updated configuration:
 
 3. Run the Docker Compose file:
 
-   ```
-   docker-compose up --build -d
-   ```
+```bash
+docker-compose up --build -d
+```
 
 This setup does the following:
 
@@ -487,10 +479,8 @@ You can now access your application at `http://localhost`. You should see a list
 
 Remember to stop the services when you're done:
 
-```
+```bash
 docker-compose down
 ```
 
 This setup provides a full-stack application with a Vue.js front-end, a Flask API, and a SQLite database, all orchestrated with Docker Compose. The front-end fetches data from the API, which in turn queries the SQLite database and returns the results.
-
-Would you like me to explain any part of this setup in more detail?
